// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppGroup> renders enabled group 1`] = `
<AppGroup__StyledGroupWrapper>
  <FlexGrid>
    <FlexGrid.Item
      flex={1}
    >
      <FlexGrid>
        <Text__Text
          ellipsis={true}
        >
          <AppGroup__Link
            href="/group-1"
          >
            Group 1
          </AppGroup__Link>
        </Text__Text>
        <AppGroup__StyledGroupAppsCount>
          (2 apps)
        </AppGroup__StyledGroupAppsCount>
      </FlexGrid>
    </FlexGrid.Item>
    <div>
      <span
        className="action-context"
      >
        <MdControlPoint
          color="#3F88D4"
          size="16"
        />
      </span>
      <span
        className="action-button"
      >
        <ButtonSecondary
          onClick={[Function]}
        >
          Add To Group
        </ButtonSecondary>
      </span>
    </div>
  </FlexGrid>
</AppGroup__StyledGroupWrapper>
`;

exports[`<AppGroup> renders in all added mode 1`] = `
<AppGroup__StyledGroupWrapper>
  <FlexGrid>
    <FlexGrid.Item
      flex={1}
    >
      <FlexGrid>
        <Text__Text
          ellipsis={true}
        >
          <AppGroup__Link
            href="/group-1"
          >
            Group 1
          </AppGroup__Link>
        </Text__Text>
        <AppGroup__StyledGroupAppsCount>
          (2 apps)
        </AppGroup__StyledGroupAppsCount>
      </FlexGrid>
    </FlexGrid.Item>
    <div>
      <FlexGrid
        className="action-context"
        inline={true}
      >
        <AppGroup__StyledGroupAppsCount>
          All added
        </AppGroup__StyledGroupAppsCount>
        <FaCheckCircleO
          color="#00BFAA"
          size="16"
        />
      </FlexGrid>
      <span
        className="action-button"
      >
        <ButtonSecondary
          href="/group-1"
        >
          Go To Group
        </ButtonSecondary>
      </span>
    </div>
  </FlexGrid>
</AppGroup__StyledGroupWrapper>
`;

exports[`<AppGroup> renders in loading mode 1`] = `
<AppGroup__StyledGroupWrapper>
  <FlexGrid>
    <FlexGrid.Item
      flex={1}
    >
      <FlexGrid>
        <Text__Text
          ellipsis={true}
        >
          <AppGroup__Link
            href="/group-1"
          >
            Group 1
          </AppGroup__Link>
        </Text__Text>
        <AppGroup__StyledGroupAppsCount>
          (2 apps)
        </AppGroup__StyledGroupAppsCount>
      </FlexGrid>
    </FlexGrid.Item>
    <Spinner
      size={16}
    />
  </FlexGrid>
</AppGroup__StyledGroupWrapper>
`;

exports[`<AppGroup> renders in partially added mode 1`] = `
<AppGroup__StyledGroupWrapper>
  <FlexGrid>
    <FlexGrid.Item
      flex={1}
    >
      <FlexGrid>
        <Text__Text
          ellipsis={true}
        >
          <AppGroup__Link
            href="/group-1"
          >
            Group 1
          </AppGroup__Link>
        </Text__Text>
        <AppGroup__StyledGroupAppsCount>
          (2 apps)
        </AppGroup__StyledGroupAppsCount>
      </FlexGrid>
    </FlexGrid.Item>
    <div>
      <FlexGrid
        className="action-context"
        inline={true}
      >
        <AppGroup__StyledGroupAppsCount>
          1 already added
        </AppGroup__StyledGroupAppsCount>
        <MdControlPoint
          color="#3F88D4"
          size="16"
        />
      </FlexGrid>
      <span
        className="action-button"
      >
        <ButtonSecondary
          onClick={[Function]}
        >
          Add Remaining
        </ButtonSecondary>
      </span>
    </div>
  </FlexGrid>
</AppGroup__StyledGroupWrapper>
`;
